Microdata: itemtype attribute must update correctly on adding or removing tokens https://bugs.webkit.org/show_bug.cgi?id=106616

Reviewed by Ryosuke Niwa.

Source/WebCore:

Added a new class MicroDataAttributeTokenList, it overrides setValue() method of
DOMSettableTokenList. setValue() is responsible to set the new attribute value for
a given element.

Tests: fast/dom/MicroData/microdata-domtokenlist-attribute-add-remove-tokens.html
       fast/dom/MicroData/propertynodelist-add-remove-itemprop-tokens.html
       fast/dom/MicroData/propertynodelist-add-remove-itemref-tokens.html

* CMakeLists.txt:
* GNUmakefile.list.am:
* Target.pri:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* dom/Node.cpp:
(WebCore::Node::itemProp):
(WebCore::Node::setItemProp):
(WebCore::Node::itemRef):
(WebCore::Node::setItemRef):
(WebCore::Node::itemType):
(WebCore::Node::setItemType):
* dom/NodeRareData.h:
(WebCore::NodeMicroDataTokenLists::itemProp):
(WebCore::NodeMicroDataTokenLists::itemRef):
(WebCore::NodeMicroDataTokenLists::itemType):
(NodeMicroDataTokenLists):
* html/DOMSettableTokenList.h: Made the constructor as protected, so that we can
override setValue() method.
(DOMSettableTokenList):
* html/MicroDataAttributeTokenList.cpp: Added.
(WebCore):
(WebCore::MicroDataAttributeTokenList::MicroDataAttributeTokenList):
(WebCore::MicroDataAttributeTokenList::setValueInternal):
(WebCore::MicroDataAttributeTokenList::setValue): It calls
DOMSettableTokenList::setValue to set internal tokens and value.
* html/MicroDataAttributeTokenList.h: Added.
(WebCore):
(MicroDataAttributeTokenList):
(WebCore::MicroDataAttributeTokenList::create):

LayoutTests:

Added tests to ensure that itemtype, itemprop, itemref attributes must update
correctly when tokens have been added or removed.

* fast/dom/MicroData/microdata-domtokenlist-attribute-add-remove-tokens-expected.txt: Added.
* fast/dom/MicroData/microdata-domtokenlist-attribute-add-remove-tokens.html: Added.
* fast/dom/MicroData/propertynodelist-add-remove-itemprop-tokens-expected.txt: Added.
* fast/dom/MicroData/propertynodelist-add-remove-itemprop-tokens.html: Added.
* fast/dom/MicroData/propertynodelist-add-remove-itemref-tokens-expected.txt: Added.
* fast/dom/MicroData/propertynodelist-add-remove-itemref-tokens.html: Added.


Canonical link: https://commits.webkit.org/126062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140745 268f45cc-cd09-0410-ab3c-d52691b4dbfc