Source/WebCore/html/DOMSettableTokenList.h
@@ -58,9 +58,10 @@ public:
 
     const SpaceSplitString& tokens() const { return m_tokens; }
 
-private:
+protected:
     DOMSettableTokenList();
 
+private:
     virtual void addInternal(const AtomicString&) OVERRIDE;
     virtual bool containsInternal(const AtomicString&) const OVERRIDE;
     virtual void removeInternal(const AtomicString&) OVERRIDE;
